fix alerts spacing on mobile

--- a/packages/assets/scss/03-organisms/_emergency-alerts.scss
+++ b/packages/assets/scss/03-organisms/_emergency-alerts.scss
@@ -21,16 +21,6 @@ $colors: (
   position: relative;
   z-index: $z-dropdown - 1;
 
-
-  // top positioning on mobile for utility nav space
-
-  .ma__ajax-pattern > & {
-
-    @media ($bp-header-toggle-max) {
-      top: 40px;
-    }
-  }
-
   &__header {
     background-color: $c-warning;
 
